2014-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-11  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski <orion@cora.nwra.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-10  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/script-email.pl: Remove $args.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/script-email.pl: Accept all characters in mailto.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix curl version check for
	  CURLE_SSL_CACERT_BADFILE.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Amcheck.pl: Fix for --without-client.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Use '.
	* server-src/amcheck.c: Encode " and / in json reply.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Disklist.swg: Fix perl warning.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl: Fix.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/*.pm: Improve html formating.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: s/"/'/
	* installcheck/Amanda_Config.pl: Check '.
	* installcheck/Amanda_Rest_Configs.pl: Check '.
	* installcheck/Amanda_Rest_Dles.pl: Check '.
	* installcheck/Amanda_Rest_Runs.pl: Check Amanda::Rest::Runs module.
	* installcheck/Makefile.am (server_tests): Add Amanda_Rest_Runs.
	* perl/Amanda/Amdump.pm: Small Improvement.
	* perl/Amanda/Amflush.pm: Small Improvement.
	* perl/Amanda/Rest/Runs.pm: Add list method.
	* perl/Amanda/Status.pm: Improve documentation.
	* perl/Amanda/Vault.pm: Remove debugging statement.
	* server-src/amflush.pl: log pid-done line.
	* server-src/planner.c: s/--exact_match/--exact-match/

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>